<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".presentation.signin.SigninFragment">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/image_kurikulum_global"
        android:contentDescription="@string/dicoding_image" />

    <TextView
        android:id="@+id/firstTV"
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:text="@string/welcome"
        android:textColor="?attr/colorPrimary"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@+id/imageLogo"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <TextView
        android:id="@+id/secondTV"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:text="@string/let_s_share_your_moment_with_us"
        app:layout_constraintEnd_toEndOf="@+id/firstTV"
        app:layout_constraintStart_toStartOf="@+id/firstTV"
        app:layout_constraintTop_toBottomOf="@+id/firstTV" />

    <TextView
        android:id="@+id/emailLabel"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginVertical="@dimen/dimen_16dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="@+id/secondTV"
        app:layout_constraintStart_toStartOf="@+id/secondTV"
        app:layout_constraintTop_toBottomOf="@+id/secondTV" />

    <com.example.dicodingstory.base.component.customEmailEditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/email_hint"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="@id/secondTV"
        app:layout_constraintStart_toStartOf="@+id/secondTV"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/password"
        android:layout_marginVertical="@dimen/dimen_16dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="@+id/emailEditText"
        app:layout_constraintStart_toStartOf="@+id/emailEditText"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <com.example.dicodingstory.base.component.customPasswordEditText
        android:id="@+id/customPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:hint="@string/password_hint"
        app:layout_constraintEnd_toEndOf="@+id/passwordLabel"
        app:layout_constraintStart_toStartOf="@+id/passwordLabel"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button_text"
        android:layout_marginVertical="@dimen/dimen_32dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="@+id/customPasswordEditText"
        app:layout_constraintStart_toStartOf="@+id/customPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/customPasswordEditText" />

    <TextView
        android:id="@+id/labelSignup"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in_dialogue"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <TextView
        android:id="@+id/signupTV"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="?attr/colorPrimary"
        android:text="@string/sign_up_hyperlink"
        app:layout_constraintBottom_toBottomOf="@+id/labelSignup"
        app:layout_constraintStart_toEndOf="@+id/labelSignup"
        app:layout_constraintTop_toTopOf="@+id/labelSignup" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customPasswordEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>