<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.DetailFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/storyIv"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginHorizontal="@dimen/dimen_36dp"
        android:layout_marginTop="@dimen/dimen_36dp"
        android:adjustViewBounds="true"
        android:background="@drawable/bg_rounded_xl"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="?attr/shapeAppearanceCornerLarge" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDesc"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:paddingHorizontal="@dimen/dimen_36dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storyIv">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimaryContainer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_user"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/usernameTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/user_story_label"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_upload_at"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/dateCreatedTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/date_story_label"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:textSize="16sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_desc"
                    android:textColor="?attr/colorOnSecondaryContainer"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/descriptionTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxHeight="75dp"
                    android:maxLines="4"
                    android:text="@string/description_story_label"
                    android:textColor="?attr/colorOnSecondaryContainer"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/labelLatitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_add_latitude"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/latitudeTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@id/labelLatitude"
                        android:text="@string/label_unknown"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/labelLongitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/labelLatitude"
                        android:text="@string/label_add_longtitude"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/longitudeTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/labelLatitude"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@id/labelLongitude"
                        android:text="@string/label_unknown"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:textSize="16sp" />

                </RelativeLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutDesc" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/label_back_to_main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>